# aws-ecs-pipeline

./: .dockerignore  Cargo.toml  Dockerfile  client.py  pipeline.yml
src/: main.rs  server.rs
