[package]
name = "chat"
version = "0.1.0"
authors = ["gc"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-web-actors = "2.0.0"
actix = "0.9.0"
rand = "0.7.3"
actix-rt = "1.1.1"
byteorder = "1.3.4"
futures = "0.3.5"
env_logger = "0.7.1"
bytes = "0.5.4"
